--- a/style.css
+++ b/style.css
@@ -443,9 +443,9 @@ input[type=submit] {
 	.commentlist {
 		padding-left: 44px;
 	}
-	.home_article {
+/*	.home_article {
 		padding-left: 20px;
-	}
+	}*/
 
 	/* menu */
 	.menubtn {
